Bacported from trunk:

PR middle-end/100574 - ICE in size_remaining, at builtins.c

gcc/ChangeLog:
	PR middle-end/100574
	* builtins.c (access_ref::get_ref): Improve detection of PHIs with
	all null arguments.

gcc/testsuite/ChangeLog:
	PR middle-end/100574
	* g++.dg/pr100574.C: New test.